Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10
-
None
-
c04b95cb5 (dev)
Description
After change https://codereview.qt-project.org/c/qt/qtbase/+/627351 builds without xcb and wayland fail with:
agent:2025/03/26 09:45:07 build.go:404: | /home/qt/work/build/build/tmp/hosttools/ld: src/gui/CMakeFiles/Gui.dir/platform/unix/qgenericunixtheme.cpp.o: in function `QGenericUnixTheme::createUnixTheme(QString const&)': agent:2025/03/26 09:45:07 build.go:404: | qgenericunixtheme.cpp:(.text+0x3c2): undefined reference to `QKdeTheme::name' agent:2025/03/26 09:45:07 build.go:404: | /home/qt/work/build/build/tmp/hosttools/ld: src/gui/CMakeFiles/Gui.dir/platform/unix/qgenericunixtheme.cpp.o: in function `QGenericUnixTheme::themeNames()': agent:2025/03/26 09:45:07 build.go:404: | qgenericunixtheme.cpp:(.text+0x1d83): undefined reference to `QKdeTheme::name' agent:2025/03/26 09:45:07 build.go:404: | /home/qt/work/build/build/tmp/hosttools/ld: src/gui/CMakeFiles/Gui.dir/platform/unix/qgenericunixtheme.cpp.o: in function `QGenericUnixTheme::createUnixTheme(QString const&)': agent:2025/03/26 09:45:07 build.go:404: | qgenericunixtheme.cpp:(.text+0x438): undefined reference to `QKdeTheme::createKdeTheme()' agent:2025/03/26 09:45:07 build.go:404: | /home/qt/work/build/build/tmp/hosttools/ld: src/gui/CMakeFiles/Gui.dir/platform/unix/qgnometheme.cpp.o: in function `QGnomeThemePrivate::initDbus()': agent:2025/03/26 09:45:07 build.go:404: | qgnometheme.cpp:(.text+0x8a2): undefined reference to `QDBusListener::QDBusListener()' agent:2025/03/26 09:45:07 build.go:404: | /home/qt/work/build/build/tmp/hosttools/ld: qgnometheme.cpp:(.text+0x8c0): undefined reference to `QDBusListener::settingChanged(QDBusListener::Provider, QDBusListener::Setting, QString const&)' agent:2025/03/26 09:45:07 build.go:404: | /home/qt/work/build/build/tmp/hosttools/ld: qgnometheme.cpp:(.text+0x910): undefined reference to `QDBusListener::staticMetaObject' agent:2025/03/26 09:45:07 build.go:404: | collect2: error: ld returned 1 exit status agent:2025/03/26 09:45:07 build.go:404: | ninja: build stopped: subcommand failed. agent:2025/03/26 09:45:07 build.go:404: | WARNING: exit code 1 from a shell command. agent:2025/03/26 09:45:07 build.go:404: NOTE: recipe qtbase-native-6.10.0-r0: task do_compile: Failed
Attachments
For Gerrit Dashboard: QTBUG-135204 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
634782,5 | QGenericUnixTheme: Fix build w/o xcb and wayland | dev | qt/qtbase | Status: MERGED | +2 | 0 |