QGenericUnixTheme: Fix build w/o xcb and wayland

Add ifdef condition to consider QKdeTheme only if Qt is built either
with wayland or xcb.

Fixes: QTBUG-135204
Change-Id: I27941bf6bd576c1532ac23992c1c94f9ace53683
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>